# noteslink

./: .env.example  README.md  pyproject.toml  requirements.txt
backend/: settings.py  urls.py
notes/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
notes/migrations/: 0001_initial.py  0002_notechange.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
